@@ -68,7 +68,7 @@ public class LookUpTxMgrByTypeAndNameTests {
 	}
 
 	@Test
-	public void lookUpByTypeAndName() {
+	public void transactionalTest() {
 		assertEquals(1, txManager1.begun);
 		assertEquals(1, txManager1.inflight);
 		assertEquals(0, txManager1.commits);
